--- a/src/components/Left_side_Bar/Left_side_Bar.css
+++ b/src/components/Left_side_Bar/Left_side_Bar.css
@@ -101,6 +101,7 @@
 }
 .after-login-main-container {
   background-color: #e1e8ec;
+  width: 98vw;
 }
 @media only screen and (max-width: 768px) {
   .main-container {
