res-after login

--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -466,6 +466,10 @@
   .after-log-in-right-side-container {
     display: none;
   }
+  .savegfhgfhgf > img,
+  .savegfhgfhgf > p {
+    display: none;
+  }
 }
 @media only screen and (max-width: 480px) {
   .main-containt {
