--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -432,6 +432,9 @@
       }
     }
   }
+  .fetched-data-main-containt-container {
+    width: 70%;
+  }
   .right_side_content {
     display: block;
   }
@@ -439,8 +442,7 @@
     display: none;
   }
   .fetched-data-afterlogin {
-    width: 80%;
-
+    width: 100%;
     display: flex;
     justify-content: center;
   }
@@ -462,6 +464,8 @@
   .right_right_all_content {
     display: flex;
     justify-content: center;
+    /* width: 80%; */
+    align-items: center;
   }
   .after-log-in-right-side-container {
     display: none;
@@ -472,10 +476,24 @@
   }
 }
 @media only screen and (max-width: 480px) {
+  .author-img {
+    width: 2rem;
+  }
+  .userName-image-container {
+    > div > h6,
+    h5 {
+      color: rgb(164, 162, 161);
+      font-size: 0.8rem;
+      font-weight: 800;
+      &:hover {
+        color: #5a5d5f;
+      }
+    }
+  }
   .main-containt {
-    width: 100%;
+    width: 90%;
     margin: 0;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 600;
   }
   .imageMainContainer {
@@ -483,7 +501,7 @@
     height: 13rem;
   }
   .fetched-main-contiant {
-    width: 23rem;
+    width: 18rem;
     border-radius: 0.7rem;
     padding: 0.8rem;
   }
@@ -506,12 +524,15 @@
 }
 @media only screen and (max-width: 320px) {
   .main-containt {
-    width: 22rem;
+    width: 12rem !important;
+    margin-left: 1rem;
     margin-right: 0;
     font-size: 1.2rem;
     font-weight: 800;
   }
   .userName-image-container {
+    margin-left: 3rem;
+
     > div > h6,
     h5 {
       font-size: 1.1rem;
@@ -521,7 +542,33 @@
       }
     }
   }
+
+  .imageMainContainer {
+    margin-left: 1rem;
+  }
   .author-img {
     width: 3rem;
+  }
+  .icon-comment {
+    height: 1rem;
+    width: auto;
+  }
+  .share-btn {
+    height: 1.2rem;
+    width: auto;
+    margin-left: -1rem;
+  }
+  .comments-icon {
+    height: 1.5rem;
+    width: auto;
+  }
+  .fetched-main-contiant {
+    width: 16rem;
+    border-radius: 0.7rem;
+    padding: 0.8rem;
+  }
+  .main-content-afterlogin {
+    width: 5rem;
+    /* margin-left: -0.5rem; */
   }
 }
