--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -229,3 +229,22 @@
     color: red;
   }
 }
+@media only screen and (max-width: 768) {
+  .all-da {
+    display: none;
+  }
+}
+@media only screen and (max-width: 480) {
+  .nav-bar {
+    width: 100% !important;
+  }
+  .uoiipo {
+    width: 5rem;
+    font-size: 0.5rem;
+  }
+  .all-da {
+    display: none;
+  }
+}
+@media only screen and (max-width: 320px) {
+}
