--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -96,6 +96,7 @@
 }
 .all-da {
   background-color: white;
+  height: fit-content;
 }
 .na-da-ta-ca {
   display: flex;
@@ -229,21 +230,80 @@
     color: red;
   }
 }
-@media only screen and (max-width: 768) {
-  .all-da {
-    display: none;
+@media only screen and (max-width: 768px) {
+  .comm-container {
+    width: 80%;
+    height: auto;
+    font-size: 0.7rem;
   }
-}
-@media only screen and (max-width: 480) {
-  .nav-bar {
-    width: 100% !important;
+
+  .main-content-comm {
+    width: 53%;
+    /* display: flex;
+    flex-direction: column; */
   }
   .uoiipo {
-    width: 5rem;
-    font-size: 0.5rem;
+    width: 44%;
+  }
+  .con-hfd {
+    font-size: 0.6rem;
+    > p {
+      display: none;
+    }
+  }
+  .lakesdeep-icn {
+    margin-right: 1rem;
+    > p {
+      font-size: 0.6rem;
+    }
+  }
+
+  .con-bell-icon {
+    width: 45%;
+  }
+  .bell-icon {
+    padding-bottom: 1rem;
+  }
+  .conn-comment {
+    width: 45%;
   }
   .all-da {
     display: none;
+  }
+  .image-single-post {
+    width: 40%;
+  }
+  .save {
+    display: none;
+  }
+  .quill-container {
+    width: 43%;
+    margin-left: -1rem;
+  }
+  .comment-btn {
+    width: 40%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .comm-container {
+    width: 100%;
+    height: auto;
+    font-size: 0.7rem;
+  }
+  .nav-bar {
+    width: 50%;
+  }
+  .main-content-comm {
+    width: 50%;
+  }
+  .uoiipo {
+    width: 40%;
+  }
+  .con-bell-icon {
+    width: 48%;
+  }
+  .bell-icon {
+    padding-bottom: 1rem;
   }
 }
 @media only screen and (max-width: 320px) {
