--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -407,7 +407,8 @@
 
   .imageMainContainer {
     width: 100%;
-    height: 475px;
+    height: 400px;
+    margin-left: 1rem;
   }
   .icon-comment {
     height: 1rem;
@@ -443,13 +444,14 @@
   }
   .fetched-data-afterlogin {
     width: 100%;
+
     display: flex;
     justify-content: center;
   }
   .right-right-all_content_after_login {
-    width: 90% !important;
+    width: 80% !important;
 
-    /* margin-left: 2rem; */
+    margin-left: 3rem;
     display: flex;
     /* align-items: center; */
     justify-content: center;
@@ -470,9 +472,9 @@
   .after-log-in-right-side-container {
     display: none;
   }
-  .savegfhgfhgf > img,
-  .savegfhgfhgf > p {
-    display: none;
+  .save > img,
+  .save > p {
+    display: none !important;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -544,7 +546,7 @@
   }
 
   .imageMainContainer {
-    margin-left: 1rem;
+    margin-left: 1.2rem;
   }
   .author-img {
     width: 3rem;
@@ -570,21 +572,32 @@
     height: auto;
     margin-left: -0.5rem;
   }
+
   .comments-icon {
     height: 1.5rem;
     width: auto;
+  }
+  .fetched-data-afterlogin {
+    width: 100% !important;
+
+    /* margin-left: 2rem; */
+  }
+  .fetched-data-main-containt-container {
+    width: 100%;
   }
   .fetched-main-contiant {
     border-radius: 1rem;
     padding: 1rem;
     width: 100% !important;
-    /* &:hover {
-      background-color: rgb(237, 240, 242);
-      cursor: pointer;
-    } */
   }
   .main-content-afterlogin {
     width: 5rem;
     /* margin-left: -0.5rem; */
+  }
+  .right-content-comntes-after-login {
+    height: 40vh;
+  }
+  .user-alldata {
+    width: 90%;
   }
 }
