--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -274,7 +274,7 @@
     width: 40%;
   }
   .save {
-    display: none;
+    display: none !important;
   }
   .quill-container {
     width: 43%;
@@ -305,6 +305,4 @@
   .bell-icon {
     padding-bottom: 1rem;
   }
-}
-@media only screen and (max-width: 320px) {
 }
