--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -86,7 +86,7 @@
   }
 }
 .fetched-data-main-containt-container {
-  width: 90% !important;
+  /* width: 90% !important; */
   align-items: center;
   flex-direction: column;
   gap: 1rem;
@@ -480,7 +480,7 @@
     display: none !important;
   }
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 375px) {
   .author-img {
     width: 2rem;
   }
