--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -307,23 +307,23 @@
     color: white;
   }
 }
-@media only screen and (max-width: 480px) {
+/* @media only screen and (max-width: 375px) {
   .search-container {
     margin-left: -2rem;
     margin-right: 0;
     /* background-color: #000000; */
-  }
+/* }
   .header-container {
     background-color: #000;
     color: #fff;
     height: 4rem;
     /* width: 115% !important; */
-  }
+/* }
   .hemb-icon {
     color: #fff;
-  }
-}
-@media only screen and (max-width: 320px) {
+  }  */
+/* } */
+/* @media only screen and (max-width: 320px) {
   .input-search {
     display: none;
   }
@@ -338,4 +338,4 @@
   .header-container {
     width: 100% !important;
   }
-}
+} */
