--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -526,6 +526,9 @@
     height: 1.5rem;
     width: auto;
   }
+  .three-dots {
+    margin-left: -0.9rem;
+  }
 }
 @media only screen and (max-width: 320px) {
   .main-containt {
