--- a/src/components/Create_Post/Create_Post.css
+++ b/src/components/Create_Post/Create_Post.css
@@ -210,8 +210,13 @@
     font-weight: 500;
   }
 }
+@media only screen and (max-width: 768px) {
+  .ql-editor {
+    width: 38rem !important;
+  }
+}
 @media only screen and (max-width: 480px) {
   .ql-editor {
-    width: 1rem !important;
+    width: 12rem !important;
   }
 }
