--- a/src/components/Signup/Login/Login.css
+++ b/src/components/Signup/Login/Login.css
@@ -94,10 +94,10 @@
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
-  background-color: rgb(224, 222, 222);
+  background-color: rgb(198, 191, 191);
   padding: 0.1rem 0.5rem;
   border-radius: 1rem;
-  width: 82%;
+  width: 80%;
   > label {
     font-size: 0.8rem;
     padding: 0 0.5rem;
@@ -107,13 +107,19 @@
     font-size: 1.5rem;
     padding: 0 0.5rem 0.5rem 0.5rem;
     border: none;
-    background-color: rgb(224, 222, 222);
+    background-color: rgb(198, 191, 191);
     border-radius: 1rem;
     font-weight: 400;
     &:focus {
       outline: none;
-      background-color: rgb(224, 222, 222);
+      background-color: rgb(198, 191, 191);
     }
+  }
+}
+.css-batk84-MuiInputBase-root-MuiFilledInput-root {
+  border-radius: 1rem 1rem 0 0;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.06) !important;
   }
 }
 .forget-pass-signup {
