--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -182,8 +182,7 @@
   padding: 0.5rem;
   border-radius: 0.5rem;
   &:hover {
-    background-color: #ede4e4;
-    cursor: pointer;
+    cursor: not-allowed;
   }
 }
 .comm-dfadasf {
