--- a/src/components/Create_Post/Create_Post.css
+++ b/src/components/Create_Post/Create_Post.css
@@ -219,4 +219,51 @@
   .ql-editor {
     width: 12rem !important;
   }
+  .div-container-create {
+    padding: 0.5rem;
+  }
+  .grid-create-post {
+    display: block;
+  }
+  .right-side-create-comments {
+    display: none;
+  }
+  .css-1u3bzj6-MuiFormControl-root-MuiTextField-root {
+    width: 100%;
+  }
+  .quill-container {
+    margin-left: 0 !important;
+  }
+  .create-post-header-data {
+    > div {
+      font-size: 0.8rem;
+      padding: 0.2rem;
+      gap: 0.3rem;
+      > img {
+        width: 12px !important;
+      }
+    }
+  }
+  .bo-da-ta {
+    gap: 0.5rem;
+    > div {
+      padding: 0.2rem;
+      > h4 {
+        font-size: 0.8rem;
+      }
+    }
+    > .nsfw {
+      > h4 {
+        font-size: 0.75rem;
+      }
+    }
+  }
+  .ql-toolbar.ql-snow .ql-formats {
+    font-size: 0.8rem;
+    margin-right: 0px !important;
+  }
+  .ql-snow.ql-toolbar button {
+    font-size: 0.8rem !important;
+    width: 26px !important;
+  }
 }
