--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -187,6 +187,7 @@
 .opiuoiu {
   cursor: not-allowed !important;
 }
+
 .homw-all-content {
   list-style: none;
   padding: 1rem;
@@ -290,8 +291,8 @@
 /* Phone */
 @media only screen and (max-width: 480px) {
   .search-container {
-    margin-left: -2rem;
-    margin-right: 0;
+    /* margin-left: -2rem; */
+    margin-right: -2rem;
   }
   .header-container {
     background-color: #000;
@@ -306,6 +307,12 @@
   }
   .hemb-icon {
     color: #fff;
+  }
+  .search-container {
+    background-color: black;
+  }
+  .injminmui {
+    color: white !important;
   }
   .login {
     > h4 {
