--- a/src/components/Right_side_bar/Right_side_bar.css
+++ b/src/components/Right_side_bar/Right_side_bar.css
@@ -88,9 +88,83 @@
 .fetched-data-main-containt-container {
   display: flex;
   /* width: 90% !important; */
-  align-items: center;
+  /* align-items: center; */
   flex-direction: column;
   gap: 1rem;
+}
+.create-post-icon {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.5rem;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  > div {
+    > img {
+      cursor: pointer;
+    }
+    > input {
+      width: 35rem;
+      height: 2rem;
+      background-color: rgb(246, 243, 243);
+      border: none;
+      padding: 0 1rem;
+    }
+    display: flex;
+    gap: 1rem;
+  }
+}
+.gallery-icons {
+  cursor: not-allowed;
+}
+.button-container {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  background-color: #f6f4f4;
+  padding: 0.5rem;
+  border-radius: 0.6rem;
+  position: sticky;
+  top: 3rem;
+}
+
+.btn-img {
+  border: none;
+  display: flex;
+  align-items: center;
+  background-color: #f6f4f4;
+  gap: 0.5rem;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 0.3rem;
+  border-radius: 0.5rem;
+  &:hover {
+    background-color: rgb(255, 255, 255);
+  }
+}
+.hot {
+  cursor: not-allowed;
+}
+.three-dot-2 {
+  cursor: not-allowed;
+  display: flex;
+  flex-direction: column;
+}
+.deletePost {
+  display: block;
+  position: absolute;
+  margin: 4rem 0 0 2rem;
+  background-color: #d8dcdf;
+  padding: 0.3rem;
+  color: rgb(0, 0, 0);
+  font-weight: 600;
+  &:hover {
+    background-color: black;
+    color: #ffffff;
+  }
+}
+.hot-img {
+  width: 1.5rem;
 }
 .imageMainContainer {
   width: 650px;
@@ -366,6 +440,11 @@
     }
   }
 }
+.share,
+.save {
+  cursor: not-allowed;
+}
+
 .right-content-comntes-likes-after-login {
   margin-top: 0.5rem;
   display: flex;
@@ -451,7 +530,7 @@
     justify-content: center;
   }
   .right-right-all_content_after_login {
-    width: 80% !important;
+    width: 95%;
 
     /* margin-left: 3rem; */
     display: flex;
@@ -506,10 +585,21 @@
     width: 100%;
     height: 13rem;
   }
+  .create-post-icon {
+    > div {
+      > input {
+        width: auto;
+      }
+    }
+  }
+  .button-container {
+    gap: 0.3rem;
+  }
   .fetched-main-contiant {
-    /* width: 18rem; */
+    width: 91%;
     border-radius: 0.7rem;
     padding: 0.8rem;
+    /* margin-left: 1.5rem; */
   }
   .right-content-comntes-likes {
     width: 5.6rem;
