--- a/src/components/Signup/Login/Login.css
+++ b/src/components/Signup/Login/Login.css
@@ -116,6 +116,32 @@
     }
   }
 }
+.login-user {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+
+  padding: 0.1rem 0.5rem;
+  border-radius: 1rem;
+  width: 80%;
+  > label {
+    font-size: 0.8rem;
+    padding: 0 0.5rem;
+  }
+  > input {
+    height: 2rem;
+    font-size: 1.5rem;
+    padding: 0 0.5rem 0.5rem 0.5rem;
+    border: none;
+    background-color: rgb(198, 191, 191);
+    border-radius: 1rem;
+    font-weight: 400;
+    &:focus {
+      outline: none;
+      background-color: rgb(198, 191, 191);
+    }
+  }
+}
 .css-batk84-MuiInputBase-root-MuiFilledInput-root {
   border-radius: 1rem 1rem 0 0;
   &:hover {
