--- a/src/components/Create_Community_modal/Community_modal.css
+++ b/src/components/Create_Community_modal/Community_modal.css
@@ -40,7 +40,7 @@
     width: 95%;
     border: 0.1rem solid rgb(202, 193, 193);
     height: 2rem;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     padding: 0 1rem;
     border-radius: 0.3rem;
   }
@@ -59,6 +59,7 @@
       align-items: center;
       gap: 0.5rem;
       font-weight: 600;
+      cursor: pointer;
       color: rgb(100, 96, 96);
       > span {
         margin-left: 0.5rem;
@@ -78,8 +79,10 @@
     gap: 1rem;
     > input {
       width: 1rem;
+      cursor: pointer;
     }
     > label {
+      cursor: pointer;
       font-size: 0.9rem;
       > span {
         background-color: rgb(237, 68, 68);
@@ -108,6 +111,7 @@
     border-color: rgb(18, 119, 208);
     font-weight: 800;
     color: rgb(0, 47, 255);
+    cursor: pointer;
     &:hover {
       background-color: #efeaea;
     }
@@ -115,6 +119,7 @@
   .comm-btn {
     background-color: rgb(22, 81, 190);
     color: #ffffff;
+    cursor: pointer;
     &:hover {
       background-color: rgb(40, 96, 200);
     }
@@ -251,6 +256,7 @@
     > div {
       > img {
         width: 100%;
+        border-radius: 2%;
       }
       > p {
         font-size: 1em;
@@ -265,6 +271,9 @@
         font-weight: 600;
         letter-spacing: 0.1rem;
         cursor: not-allowed;
+        > svg {
+          margin-right: 0.5rem;
+        }
         &:hover {
           border-radius: 0.5rem;
           background-color: rgb(242, 239, 239);
@@ -272,9 +281,16 @@
       }
       .comment-btn-community {
         cursor: pointer;
+        > svg {
+          margin-right: 0.5rem;
+        }
       }
     }
   }
+}
+.noData {
+  text-align: center;
+  margin-top: 5rem;
 }
 @media only screen and (max-width: 768px) {
   .comm-header {
