--- a/src/components/Header/profile-dropdown/Profile_Dropdown.css
+++ b/src/components/Header/profile-dropdown/Profile_Dropdown.css
@@ -124,7 +124,7 @@
 
 .css-8ndowl,
 .css-79ws1d-MuiModal-root {
-  z-index: 2500;
+  z-index: 2500 !important;
 }
 @media only screen and (max-width: 768px) {
   .name-data {
