--- a/src/components/Signup/Login/Login.css
+++ b/src/components/Signup/Login/Login.css
@@ -68,7 +68,7 @@
   padding: 0.5rem 0.8rem;
   border-radius: 3rem;
   width: 80%;
-  gap: 4rem;
+  /* gap: 4rem; */
   cursor: pointer;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -120,10 +120,9 @@
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
-
   padding: 0.1rem 0.5rem;
   border-radius: 1rem;
-  width: 80%;
+  width: 82%;
   > label {
     font-size: 0.8rem;
     padding: 0 0.5rem;
@@ -141,6 +140,10 @@
       background-color: rgb(198, 191, 191);
     }
   }
+}
+.continue-GA {
+  width: 100%;
+  text-align: center;
 }
 .css-batk84-MuiInputBase-root-MuiFilledInput-root {
   border-radius: 1rem 1rem 0 0;
@@ -261,7 +264,7 @@
   }
   .continue-google-other {
     margin-top: 2rem;
-    width: 19rem;
+    /* width: 19rem; */
   }
   .google-login {
     width: 80%;
