--- a/src/components/Left_side_Bar/Left_side_Bar.css
+++ b/src/components/Left_side_Bar/Left_side_Bar.css
@@ -193,6 +193,10 @@
   background-color: #000;
   color: white;
 }
+#darkBlackTheme {
+  background-color: #000;
+  color: white;
+}
 @media only screen and (max-width: 768px) {
   .main-container {
     display: block;
